k8s/apps/wallabag/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallabag
  labels:
    managed-by: argocd
    purpose: household-service
