k8s/apps/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  selector:
    app: wallabag
  ports:
    - port: 80
      targetPort: http
